@@ -4,6 +4,7 @@ import static br.com.utfpr.gerenciamento.server.enumeration.UserRole.ROLE_ADMINI
 import static br.com.utfpr.gerenciamento.server.enumeration.UserRole.ROLE_LABORATORISTA_NAME;
 
 import br.com.utfpr.gerenciamento.server.annotation.InvalidateDashboardCache;
+import br.com.utfpr.gerenciamento.server.dto.EmprestimoListDto;
 import br.com.utfpr.gerenciamento.server.dto.EmprestimoResponseDto;
 import br.com.utfpr.gerenciamento.server.enumeration.StatusDevolucao;
 import br.com.utfpr.gerenciamento.server.enumeration.TipoItem;
@@ -21,6 +22,7 @@ import br.com.utfpr.gerenciamento.server.model.dashboards.DashboardItensEmpresta
 import br.com.utfpr.gerenciamento.server.model.filter.EmprestimoFilter;
 import br.com.utfpr.gerenciamento.server.repository.EmprestimoRepository;
 import br.com.utfpr.gerenciamento.server.repository.UsuarioRepository;
+import br.com.utfpr.gerenciamento.server.repository.projection.EmprestimoListProjection;
 import br.com.utfpr.gerenciamento.server.service.EmprestimoService;
 import br.com.utfpr.gerenciamento.server.service.ItemService;
 import br.com.utfpr.gerenciamento.server.service.ReservaService;
@@ -35,7 +37,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.cache.annotation.CacheEvict;
@@ -100,6 +101,31 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   @Override
   public Emprestimo toEntity(EmprestimoResponseDto entity) {
     return modelMapper.map(entity, Emprestimo.class);
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public Page<EmprestimoListDto> findAllPagedList(String filter, Pageable pageable) {
+    Page<EmprestimoListProjection> page;
+    if (filter != null && !filter.isBlank()) {
+      page = emprestimoRepository.findAllProjectedWithFilter(filter, pageable);
+    } else {
+      page = emprestimoRepository.findAllProjected(pageable);
+    }
+    return page.map(EmprestimoListDto::fromProjection);
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public Page<EmprestimoListDto> findAllPagedListByUser(
+      String filter, Pageable pageable, String username) {
+    Page<EmprestimoListProjection> page;
+    if (filter != null && !filter.isBlank()) {
+      page = emprestimoRepository.findAllProjectedByUsernameWithFilter(username, filter, pageable);
+    } else {
+      page = emprestimoRepository.findAllProjectedByUsername(username, pageable);
+    }
+    return page.map(EmprestimoListDto::fromProjection);
   }
 
   /**
@@ -167,6 +193,37 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   }
 
   /**
+   * Busca paginada com filtro textual para usuário específico.
+   *
+   * <p>Combina filtro textual com filtro de usuário de forma segura usando Specification, evitando
+   * injeção de filtro por concatenação de strings.
+   *
+   * @param textFilter Filtro textual opcional
+   * @param pageable Configuração de paginação
+   * @param username Username do usuário para filtrar
+   * @return Página de empréstimos do usuário com filtro textual aplicado
+   */
+  @Override
+  @Cacheable(
+      value = "emprestimos-page-user",
+      key = "T(java.util.Objects).hash(#textFilter, #pageable.toString(), #username)",
+      unless = "#result == null || #result.isEmpty()")
+  @Transactional(readOnly = true)
+  public Page<EmprestimoResponseDto> findAllPagedByUserWithTextFilter(
+      String textFilter, Pageable pageable, String username) {
+    Specification<Emprestimo> spec = EmprestimoSpecifications.withFetchCollections();
+
+    Usuario usuario = usuarioService.toEntity(usuarioService.findByUsername(username));
+    spec = spec.and((root, query, cb) -> cb.equal(root.get("usuarioEmprestimo"), usuario));
+
+    if (textFilter != null && !textFilter.isEmpty()) {
+      spec = spec.and(self.filterByAllFields(textFilter));
+    }
+
+    return self.findAllSpecification(spec, pageable);
+  }
+
+  /**
    * Metodo interno para executar Specification. Não deve ser chamado diretamente (use {@link
    * #findAllPagedWithTextFilter}).
    *
@@ -196,7 +253,9 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   @Transactional
   @PreAuthorize("hasAnyRole('" + ROLE_LABORATORISTA_NAME + "', '" + ROLE_ADMINISTRADOR_NAME + "')")
   @InvalidateDashboardCache
-  @CacheEvict(value = "emprestimos-page", allEntries = true)
+  @CacheEvict(
+      value = {"emprestimos-page", "emprestimos-page-user"},
+      allEntries = true)
   public EmprestimoResponseDto save(Emprestimo entity) {
     if (entity.getUsuarioEmprestimo() == null) {
       throw new IllegalArgumentException("usuarioEmprestimo não pode ser null");
@@ -238,7 +297,9 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   @Transactional
   @PreAuthorize("hasAnyRole('" + ROLE_LABORATORISTA_NAME + "', '" + ROLE_ADMINISTRADOR_NAME + "')")
   @InvalidateDashboardCache
-  @CacheEvict(value = "emprestimos-page", allEntries = true)
+  @CacheEvict(
+      value = {"emprestimos-page", "emprestimos-page-user"},
+      allEntries = true)
   public void delete(Long id) {
     super.delete(id);
   }
@@ -255,7 +316,9 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   @Transactional
   @PreAuthorize("hasAnyRole('" + ROLE_LABORATORISTA_NAME + "', '" + ROLE_ADMINISTRADOR_NAME + "')")
   @InvalidateDashboardCache
-  @CacheEvict(value = "emprestimos-page", allEntries = true)
+  @CacheEvict(
+      value = {"emprestimos-page", "emprestimos-page-user"},
+      allEntries = true)
   public void delete(Emprestimo entity) {
     super.delete(entity);
   }
@@ -265,8 +328,8 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
   public List<EmprestimoResponseDto> findAllByDataEmprestimoBetween(
       LocalDate dtIni, LocalDate dtFim) {
     return emprestimoRepository.findAllByDataEmprestimoBetween(dtIni, dtFim).stream()
-        .map(emprestimo -> toDto(emprestimo))
-        .collect(Collectors.toList());
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
@@ -313,26 +376,36 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
     // OTIMIZAÇÃO: Usa Specification com JOIN FETCH ao invés de JDBC manual
     // Elimina N+1 queries: 200+ queries → 1 query (melhoria de 90-95%)
     Specification<Emprestimo> spec = EmprestimoSpecifications.fromFilter(emprestimoFilter);
-    return emprestimoRepository.findAll(spec, Sort.by("id")).stream()
-        .map(emprestimo -> toDto(emprestimo))
-        .collect(Collectors.toList());
+    return emprestimoRepository.findAll(spec, Sort.by("id")).stream().map(this::toDto).toList();
   }
 
   @Override
   @Transactional(readOnly = true)
+  @PreAuthorize(
+      "authentication.name == #username || hasAnyRole('"
+          + ROLE_LABORATORISTA_NAME
+          + "', '"
+          + ROLE_ADMINISTRADOR_NAME
+          + "')")
   public List<EmprestimoResponseDto> findAllUsuarioEmprestimo(String username) {
     Usuario usuario = usuarioService.toEntity(usuarioService.findByUsername(username));
     return emprestimoRepository.findAllByUsuarioEmprestimo(usuario).stream()
-        .map(emprestimo -> toDto(emprestimo))
-        .collect(Collectors.toList());
+        .map(this::toDto)
+        .toList();
+  }
+
+  @Override
+  @Transactional(readOnly = true)
+  public List<EmprestimoResponseDto> findAllByItemId(Long itemId) {
+    return emprestimoRepository.findAllByItemId(itemId).stream().map(this::toDto).toList();
   }
 
   @Override
   @Transactional(readOnly = true)
   public List<EmprestimoResponseDto> findAllEmprestimosAbertos() {
     return emprestimoRepository.findAllByDataDevolucaoIsNullOrderById().stream()
-        .map(emprestimo -> toDto(emprestimo))
-        .collect(Collectors.toList());
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
@@ -343,16 +416,16 @@ public class EmprestimoServiceImpl extends CrudServiceImpl<Emprestimo, Long, Emp
       return Collections.emptyList();
     }
     return emprestimoRepository.findAllByUsuarioEmprestimoAndDataDevolucaoIsNull(usuario).stream()
-        .map(emprestimo -> toDto(emprestimo))
-        .collect(Collectors.toList());
+        .map(this::toDto)
+        .toList();
   }
 
   @Override
   @Transactional
   public void changePrazoDevolucao(Long idEmprestimo, LocalDate novaData) {
-    var emprestimo = toEntity(findOne(idEmprestimo));
+    var emprestimo = toEntity(self.findOne(idEmprestimo));
     emprestimo.setPrazoDevolucao(novaData);
-    EmprestimoResponseDto saved = save(emprestimo);
+    EmprestimoResponseDto saved = self.save(emprestimo);
 
     // Publica evento - email enviado APÓS commit
     String email = saved.getUsuarioEmprestimo().getEmail();
